--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -31,9 +31,10 @@
         android:layout_height="40dp"
         android:ems="10"
         android:background="@drawable/bg_rounded"
-        android:hint="  Nama Anda"
+        android:hint="Nama Anda"
         android:layout_marginBottom="10dp"
-        android:inputType="text" />
+        android:inputType="text"
+        android:paddingStart="10dp"/>
 
     <EditText
         android:id="@+id/editTextEmail"
@@ -41,9 +42,10 @@
         android:layout_height="40dp"
         android:ems="10"
         android:background="@drawable/bg_rounded"
-        android:hint="  Email"
+        android:hint="Email"
         android:layout_marginBottom="10dp"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:paddingStart="10dp"/>
 
     <EditText
         android:id="@+id/editTextPassword"
@@ -51,30 +53,40 @@
         android:layout_height="40dp"
         android:ems="10"
         android:background="@drawable/bg_rounded"
-        android:hint="  Masukkan Sandi"
+        android:hint="Masukkan Sandi"
         android:layout_marginBottom="10dp"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:paddingStart="10dp"/>
 
     <EditText
-        android:id="@+id/editTextPassword2"
+        android:id="@+id/editTextConfirmPassword"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:ems="10"
         android:background="@drawable/bg_rounded"
-        android:hint="  Ulangi Kata Sandi"
+        android:hint="Ulangi Kata Sandi"
         android:layout_marginBottom="10dp"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:paddingStart="10dp"/>
 
-    <EditText
-        android:id="@+id/editTextJenisKelamin"
+<!--    <EditText-->
+<!--        android:id="@+id/editTextJenisKelamin"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:ems="10"-->
+<!--        android:background="@drawable/bg_rounded"-->
+<!--        android:hint="Jenis Kelamin"-->
+<!--        android:layout_marginBottom="10dp"-->
+<!--        android:inputType="textFilter" />-->
+
+    <Spinner
+        android:id="@+id/spinnerJenisKelamin"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:ems="10"
         android:background="@drawable/bg_rounded"
-        android:hint="  Jenis Kelamin"
+        android:autofillHints="Jenis Kelamin"
         android:layout_marginBottom="10dp"
-        android:inputType="textFilter" />
-
+        android:spinnerMode="dropdown"/>
 
     <EditText
         android:id="@+id/editTextTanggalLahir"
@@ -82,10 +94,10 @@
         android:layout_height="40dp"
         android:ems="10"
         android:background="@drawable/bg_rounded"
-        android:hint="  Tanggal Lahir"
+        android:hint="Tanggal Lahir"
         android:layout_marginBottom="10dp"
-        android:inputType="date" />
-
+        android:inputType="date"
+        android:paddingStart="10dp"/>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -123,7 +135,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:padding="0dp"
-                android:theme="@style/Button.Transparent"/>
+                android:theme="@style/Button.Primary"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -135,8 +147,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@drawable/bg_rounded_15_blue"
-        android:text="Masuk"
+        android:text="Daftar"
         android:textColor="@color/white"
-        android:theme="@style/Button.Transparent"/>
+        android:theme="@style/Button.Primary"
+        android:layout_marginBottom="40dp"/>
 
 </LinearLayout>
