--- a/app/src/main/res/layout/activity_immunization.xml
+++ b/app/src/main/res/layout/activity_immunization.xml
@@ -76,7 +76,7 @@
                         android:layout_gravity="center"
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="5dp"
-                        android:theme="@style/Button.Transparent"
+                        android:theme="@style/Button.Primary"
                         android:background="@drawable/bg_rounded_30"
                         android:textColor="#86BBD0"
                         android:text="Pilih"/>
