--- a/app/src/main/res/layout/activity_new_act.xml
+++ b/app/src/main/res/layout/activity_new_act.xml
@@ -129,7 +129,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:textSize="20dp"
-                android:theme="@style/Button.Transparent"
+                android:theme="@style/Button.Primary"
                 android:background="@drawable/bg_rounded_15_blue"
                 android:textColor="@color/white"/>
 
