--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,19 @@
     android:paddingEnd="40dp"
     tools:context=".HomeFragment">
 
+    <RelativeLayout
+        android:id="@+id/loadingPanel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+    </RelativeLayout>
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -27,7 +40,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textwelcome"
+                android:id="@+id/textViewWelcome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -68,7 +81,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:padding="0dp"
-                android:theme="@style/Button.Transparent"/>
+                android:theme="@style/Button.Primary"/>
 
             <Button
                 android:id="@+id/buttonimunisasi"
@@ -80,7 +93,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:padding="0dp"
-                android:theme="@style/Button.Transparent"/>
+                android:theme="@style/Button.Primary"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -100,7 +113,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:padding="0dp"
-                android:theme="@style/Button.Transparent"/>
+                android:theme="@style/Button.Primary"/>
 
             <Button
                 android:id="@+id/buttonArtikel"
@@ -112,7 +125,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:padding="0dp"
-                android:theme="@style/Button.Transparent"/>
+                android:theme="@style/Button.Primary"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
