--- a/app/src/main/res/layout/fragment_register_child.xml
+++ b/app/src/main/res/layout/fragment_register_child.xml
@@ -31,29 +31,41 @@
         android:layout_height="40dp"
         android:ems="10"
         android:background="@drawable/bg_rounded"
-        android:hint="  Nama Anak"
+        android:hint="Nama Anak"
         android:layout_marginBottom="20dp"
-        android:inputType="text" />
+        android:inputType="text"
+        android:paddingStart="10dp"/>
 
-    <EditText
-        android:id="@+id/editTextJenisKelamin"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:ems="10"
-        android:background="@drawable/bg_rounded"
-        android:hint="  Jenis Kelamin"
-        android:layout_marginBottom="20dp"
-        android:inputType="textFilter" />
-
-    <EditText
-        android:id="@+id/editTextDate"
+    <Spinner
+        android:id="@+id/spinnerJenisKelamin"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@drawable/bg_rounded"
+        android:autofillHints="Jenis Kelamin"
+        android:layout_marginBottom="10dp"
+        android:spinnerMode="dropdown"/>
+
+<!--    <EditText-->
+<!--        android:id="@+id/editTextJenisKelamin"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:ems="10"-->
+<!--        android:background="@drawable/bg_rounded"-->
+<!--        android:hint="Jenis Kelamin"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:inputType="textFilter"-->
+<!--        android:paddingStart="10dp"/>-->
+
+    <EditText
+        android:id="@+id/editTextTanggalLahir"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/bg_rounded"
         android:ems="10"
-        android:hint="  Tanggal Lahir"
+        android:hint="Tanggal Lahir"
         android:layout_marginBottom="20dp"
-        android:inputType="date" />
+        android:inputType="date"
+        android:paddingStart="10dp"/>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -70,7 +82,7 @@
         android:background="@drawable/bg_rounded_15_blue"
         android:text="Daftar Anak"
         android:textColor="@color/white"
-        android:theme="@style/Button.Transparent"/>
+        android:theme="@style/Button.Primary"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
