--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -3,11 +3,44 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_nav_graph"
-    app:startDestination="@id/registerChildFragment2">
+    app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/registerChildFragment2"
+        android:id="@+id/registerChildFragment"
         android:name="com.example.anakku.RegisterChildFragment"
         android:label="fragment_register_child"
-        tools:layout="@layout/fragment_register_child" />
+        tools:layout="@layout/fragment_register_child" >
+        <action
+            android:id="@+id/action_registerChildFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.anakku.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_registerChildFragment"
+            app:destination="@id/registerChildFragment"
+            app:popUpTo="@id/registerChildFragment"
+            app:popUpToInclusive="true"/>
+        <action
+            android:id="@+id/action_homeFragment_to_childProfileFragment"
+            app:destination="@id/childProfileFragment"
+            app:popUpTo="@id/childProfileFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
+    <fragment
+        android:id="@+id/childProfileFragment"
+        android:name="com.example.anakku.ChildProfileFragment"
+        android:label="fragment_child_profile"
+        tools:layout="@layout/fragment_child_profile" >
+        <action
+            android:id="@+id/action_childProfileFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
 </navigation>
