--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-    <style name="Button.Transparent" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="colorPrimary">@null</item>
+    <style name="Button.Primary" parent="Theme.AnakKu">
+        <item name="colorPrimary">#86BBD0</item>
     </style>
 </resources>
