--- a/app/src/main/res/layout/activity_forum.xml
+++ b/app/src/main/res/layout/activity_forum.xml
@@ -105,7 +105,7 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttondiskusi"
             android:layout_width="match_parent"
             android:layout_height="35dp"
@@ -118,9 +118,12 @@
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="175dp"
-            android:theme="@style/Button.Primary"
+            android:colorAccent="@style/Button.White"
             android:background="@drawable/bg_rounded_30"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+
+
+            />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
