--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,7 @@
     <style name="Button.Primary" parent="Theme.AnakKu">
         <item name="colorPrimary">#86BBD0</item>
     </style>
+    <style name="Button.White" parent="Theme.AnakKu">
+        <item name="colorAccent">@android:color/white</item>
+    </style>
 </resources>
