--- a/app/src/main/res/layout/activity_immunization.xml
+++ b/app/src/main/res/layout/activity_immunization.xml
@@ -119,7 +119,7 @@
 
                     <ImageView
                         android:id="@id/imageView"
-                        android:src="@drawable/bayi"
+                        android:src="@drawable/imunisasi1"
                         android:layout_gravity="start"
                         android:layout_width="150dp"
                         android:layout_height="100dp"/>
@@ -212,7 +212,7 @@
 
                     <ImageView
                         android:id="@id/imageView"
-                        android:src="@drawable/batita"
+                        android:src="@drawable/imunisasi3"
                         android:layout_gravity="start"
                         android:layout_width="150dp"
                         android:layout_height="100dp"/>
@@ -304,7 +304,7 @@
 
                     <ImageView
                         android:id="@id/imageView"
-                        android:src="@drawable/bocah1"
+                        android:src="@drawable/imunisasi3"
                         android:layout_gravity="start"
                         android:layout_width="150dp"
                         android:layout_height="100dp"/>
