--- a/app/src/main/res/layout/activity_new_act.xml
+++ b/app/src/main/res/layout/activity_new_act.xml
@@ -111,31 +111,20 @@
             android:background="@drawable/bg_rounded"
             android:textColor="@color/black"/>
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/bg_rounded_15_blue">
-
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tambahkan"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                android:textSize="20dp"
-                android:theme="@style/Button.Primary"
+                android:textSize="10dp"
+                android:backgroundTint="@android:color/white"
                 android:background="@drawable/bg_rounded_15_blue"
-                android:textColor="@color/white"/>
+                android:textColor="@color/black"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
 
 </androidx.appcompat.widget.LinearLayoutCompat>
+
+
