--- a/app/src/main/res/layout/fragment_child_complaint.xml
+++ b/app/src/main/res/layout/fragment_child_complaint.xml
@@ -35,7 +35,7 @@
         android:background="@drawable/bg_rounded_10_bluemuda">
 
         <Button
-            android:id="@+id/buttonkeluhan1"
+            android:id="@+id/buttonKeluhan1"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
             android:layout_width="250dp"
