--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -84,7 +84,7 @@
                 android:theme="@style/Button.Primary"/>
 
             <Button
-                android:id="@+id/buttonimunisasi"
+                android:id="@+id/buttonImunisasi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_rounded_15_blue"
