--- a/app/src/main/res/layout/fragment_article_child_violence.xml
+++ b/app/src/main/res/layout/fragment_article_child_violence.xml
@@ -39,7 +39,7 @@
         android:text="Kekerasan Fisik" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewArticle"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_marginTop="20dp"
