--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -141,15 +141,12 @@
             app:destination="@id/articleChildViolenceFragment"
             app:popUpTo="@id/articleChildViolenceFragment"
             app:popUpToInclusive="true"/>
-    <fragment
-        android:id="@+id/activityAnakFragment"
-        android:name="com.example.anakku.ActivityAnakFragment"
-        android:label="fragment_activity_anak"
-        tools:layout="@layout/fragment_activity_anak" />
     </fragment>
     <fragment
         android:id="@+id/activityAnakFragment"
         android:name="com.example.anakku.ActivityAnakFragment"
         android:label="fragment_activity_anak"
-        tools:layout="@layout/fragment_activity_anak" />
+        tools:layout="@layout/fragment_activity_anak">
+
+    </fragment>
 </navigation>
